chaging the home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="zxx">
 
 <head>
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Staging | Template</title>
+    <title>Home | ECDE</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
@@ -34,12 +34,12 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__logo">
-            <a href="#"><img src="img/logo.png" alt=""></a>
+            <a href="#"><img src="img/ECDElogo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
             <span>Call us for any questions</span>
-            <h4>+01 123 456 789</h4>
+            <h4>(510) 737-9942</h4>
         </div>
     </div>
     <!-- Offcanvas Menu End -->
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="#"><img src="img/logo.png" alt=""></a>
+                        <a href="index.html"><img style="height:55px;width:165px;margin:-10px"; src="img/ECDElogo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -75,7 +75,7 @@
                 <div class="col-lg-3">
                     <div class="header__widget">
                         <span>Call us for any questions</span>
-                        <h4>+01 123 456 789</h4>
+                        <h4>(510) 737-9942</h4>
                     </div>
                 </div>
             </div>
@@ -87,9 +87,9 @@
     <!-- Hero Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hero__items set-bg" data-setbg="img/learnbg1.png">
                 <div class="hero__text">
-                    <h2>Quality is not only our standard.</h2>
+                    <h2>Every Child Deserves Education Foundation</h2>
                     <a href="#" class="primary-btn">See Project</a>
                     <a href="#" class="more_btn">Discover more</a>
                     <div class="hero__social">
@@ -100,9 +100,48 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__items set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hero__items set-bg" data-setbg="img/learnbg2.png">
                 <div class="hero__text">
-                    <h2>Quality is not only our standard.</h2>
+                    <h2>Every Child Deserves Education Foundation</h2>
+                    <a href="#" class="primary-btn">See Project</a>
+                    <a href="#" class="more_btn">Discover more</a>
+                    <div class="hero__social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="hero__items set-bg" data-setbg="img/learnbg3.png">
+                <div class="hero__text">
+                    <h2>Every Child Deserves Education Foundation</h2>
+                    <a href="#" class="primary-btn">See Project</a>
+                    <a href="#" class="more_btn">Discover more</a>
+                    <div class="hero__social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="hero__items set-bg" data-setbg="img/learnbg4.png">
+                <div class="hero__text">
+                    <h2>Every Child Deserves Education Foundation</h2>
+                    <a href="#" class="primary-btn">See Project</a>
+                    <a href="#" class="more_btn">Discover more</a>
+                    <div class="hero__social">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="hero__items set-bg" data-setbg="img/learnbg5.png">
+                <div class="hero__text">
+                    <h2>Every Child Deserves Education Foundation</h2>
                     <a href="#" class="primary-btn">See Project</a>
                     <a href="#" class="more_btn">Discover more</a>
                     <div class="hero__social">
@@ -126,8 +165,8 @@
                 <div class="col-lg-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>who are we</span>
-                            <h2>We propose and discuss design rules</h2>
+                            <h2>who are we</h2>
+                            <span>What our Organization is about</span>
                         </div>
                         <div class="about__para__text">
                             <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
