--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="./projects.html">Projects</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li><a href="./projects.html">Get Involved</a></li>
+                            <li><a href="./about.html">Donate</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./about.html">Contact</a></li>
+<!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -69,6 +72,7 @@
                             </li>
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./contact.html">Contact</a></li>
+                        -->
                         </ul>
                     </nav>
                 </div>
@@ -90,65 +94,55 @@
             <div class="hero__items set-bg" data-setbg="img/learnbg1.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">See Project</a>
-                    <a href="#" class="more_btn">Discover more</a>
+                    <a href="#" class="primary-btn">Get Involved</a>
                     <div class="hero__social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="hero__items set-bg" data-setbg="img/learnbg2.png">
-                <div class="hero__text">
-                    <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">See Project</a>
-                    <a href="#" class="more_btn">Discover more</a>
-                    <div class="hero__social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
             <div class="hero__items set-bg" data-setbg="img/learnbg3.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">See Project</a>
-                    <a href="#" class="more_btn">Discover more</a>
+                    <a href="#" class="primary-btn">Donate</a>
                     <div class="hero__social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="hero__items set-bg" data-setbg="img/learnbg4.png">
-                <div class="hero__text">
-                    <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">See Project</a>
-                    <a href="#" class="more_btn">Discover more</a>
-                    <div class="hero__social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
             <div class="hero__items set-bg" data-setbg="img/learnbg5.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
-                    <a href="#" class="primary-btn">See Project</a>
-                    <a href="#" class="more_btn">Discover more</a>
+                    <a href="#" class="primary-btn">View Projects</a>
                     <div class="hero__social">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="hero__items set-bg" data-setbg="img/learnbg2.png">
+                <div class="hero__text">
+                    <h2>Every Child Deserves Education Foundation</h2>
+                    <a href="#" class="primary-btn">Meet the Team</a>
+                    <div class="hero__social">
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="hero__items set-bg" data-setbg="img/learnbg4.png">
+                <div class="hero__text">
+                    <h2>Every Child Deserves Education Foundation</h2>
+                    <a href="#" class="primary-btn">Contact Us</a>
+                    <div class="hero__social">
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -169,11 +163,8 @@
                             <span>What our Organization is about</span>
                         </div>
                         <div class="about__para__text">
-                            <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
-                                grids. We propose and discuss design rules for functional metasurfaces with randomly
-                            placed.</p>
-                            <p>Anisotropic elements that randomly sample. Quisque sit amet nisl ante. Fusce lacinia non
-                            tellus id gravida. Cras neque dolor, volutpat et hendrerit et.</p>
+                            <p>ECDE Foundation, or Every Child Deserves Education Foundation, is a 501(c)(3) nonprofit organization run by students whose goal is to contribute to the betterment of education for children worldwide by providing funds/resources to underprivileged schools. We are currently working on a project in which we create educational videos to help the underprivileged children learn about a variety of subjects. </p>
+
                         </div>
                         <a href="#" class="primary-btn normal-btn">Learn More</a>
                     </div>
@@ -181,7 +172,7 @@
                 <div class="col-lg-6">
                     <div class="about__pic">
                         <div class="about__pic__inner">
-                            <img src="img/about-pic.jpg" alt="">
+                            <img src="img/mar.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -204,7 +195,6 @@
             <div class="row">
                 <div class="project__slider owl-carousel">
                     <div class="col-lg-3">
-                        <div class="project__slider__item set-bg" data-setbg="img/project/project-1.jpg">
                             <div class="project__slider__item__hover">
                                 <span>interiors</span>
                                 <h5>Lower River Street Astoria</h5>
@@ -263,7 +253,6 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
-                        <img src="img/services/services-1.png" alt="">
                         <h4>Interior Design</h4>
                         <p>As you might expect of a company that began as a high-end interiors contractor, we pay strict
                         attention.</p>
@@ -271,7 +260,6 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
-                        <img src="img/services/services-2.png" alt="">
                         <h4>Office Design</h4>
                         <p>Our commitment to exceptional quality has never wavered. To day ranks as one of the most
                         highly-regarded construction.</p>
@@ -279,7 +267,6 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
-                        <img src="img/services/services-3.png" alt="">
                         <h4>Home Design</h4>
                         <p>Interdisciplinary architectural studio with cultural, residential and commercial projects
                         built worldwide.</p>
@@ -287,7 +274,6 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
-                        <img src="img/services/services-4.png" alt="">
                         <h4>Design drawing</h4>
                         <p>Creating architectural and creative solutions to help people realize their vision and make
                         them a reality.</p>
@@ -343,8 +329,7 @@
     <!-- Services Section End -->
 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg">
-        <div class="container">
+        <!--
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
@@ -460,26 +445,26 @@
                     </div>
                 </div>
             </div>
+        -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo__carousel owl-carousel">
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-1.png" alt=""></a>
+                            <a href="#"><img src="img/nri.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-2.png" alt=""></a>
+                            <a href="#"><img src="img/quad.jpg" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
+                            <a href="#"><img src="img/sanjiv.jpg" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-4.png" alt=""></a>
+                            <a href="#"><img src="img/zeal.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-5.png" alt=""></a>
+                            <a href="#"><img src="img/info.png" alt=""></a>
                         </div>
-                        <div class="logo__carousel__item">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
+
                         </div>
                     </div>
                 </div>
