finishing home page

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
-                        <span>Our works</span>
-                        <h2>Latest projects</h2>
+                        <span>Our Work</span>
+                        <h2>Some of the amazing people we have helped</h2>
                     </div>
                 </div>
             </div>
@@ -202,34 +202,19 @@
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="project__slider__item set-bg" data-setbg="img/project/project-2.jpg">
-                            <div class="project__slider__item__hover">
-                                <span>interiors</span>
-                                <h5>Lower River Street Astoria</h5>
-                            </div>
+                        <div class="project__slider__item set-bg" data-setbg="img/pc1.jpeg">
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="project__slider__item set-bg" data-setbg="img/project/project-3.jpg">
-                            <div class="project__slider__item__hover">
-                                <span>interiors</span>
-                                <h5>Lower River Street Astoria</h5>
-                            </div>
+                        <div class="project__slider__item set-bg" data-setbg="img/solar.jpg">
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="project__slider__item set-bg" data-setbg="img/project/project-4.jpg">
-                            <div class="project__slider__item__hover">
-                                <span>interiors</span>
-                                <h5>Lower River Street Astoria</h5>
-                            </div>
+                        <div class="project__slider__item set-bg" data-setbg="img/pc3.jpeg">
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="project__slider__item set-bg" data-setbg="img/project/project-2.jpg">
-                            <div class="project__slider__item__hover">
-                                <span>interiors</span>
-                                <h5>Lower River Street Astoria</h5>
+                        <div class="project__slider__item set-bg" data-setbg="img/pc4.jpeg">
                             </div>
                         </div>
                     </div>
@@ -253,39 +238,36 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
-                        <h4>Interior Design</h4>
-                        <p>As you might expect of a company that began as a high-end interiors contractor, we pay strict
-                        attention.</p>
+                        <h4>Education</h4>
+                        <p>We teach underserved children across the world and help them get training in STEM subjects and obtain a better future. </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
-                        <h4>Office Design</h4>
-                        <p>Our commitment to exceptional quality has never wavered. To day ranks as one of the most
-                        highly-regarded construction.</p>
+                        <h4>Fundraising</h4>
+                        <p>We host many fundraisers where we raise hundreds of dollars to fund and support schools that help underserved children.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
-                        <h4>Home Design</h4>
-                        <p>Interdisciplinary architectural studio with cultural, residential and commercial projects
-                        built worldwide.</p>
+                        <h4>Events</h4>
+                        <p>We have many events such as hackathons abd tournaments where we showcase these talented individuals's talent.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
-                        <h4>Design drawing</h4>
-                        <p>Creating architectural and creative solutions to help people realize their vision and make
-                        them a reality.</p>
+                        <h4>Mentoring</h4>
+                        <p>We partner with other organizations around the world and help guid them in helping children in their local areas.</p>
                     </div>
                 </div>
             </div>
+ 
             <div class="counter__content">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="counter__item">
                             <div class="counter__item__number">
-                                <h2 class="count">85</h2>
+                                <h2 class="count">12</h2>
                             </div>
                             <div class="counter__item__text">
                                 <h5>Projects<br /> Completed</h5>
@@ -295,30 +277,30 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="counter__item">
                             <div class="counter__item__number">
-                                <h2 class="count">127</h2>
+                                <h2 class="count">200</h2>
                             </div>
                             <div class="counter__item__text">
-                                <h5>Happy<br /> Clients</h5>
+                                <h5>Students<br /> Helped</h5>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="counter__item">
                             <div class="counter__item__number">
-                                <h2 class="count">36</h2>
+                                <h2 class="count">20</h2>
                             </div>
                             <div class="counter__item__text">
-                                <h5>Awards<br /> Received</h5>
+                                <h5>Amazing<br/>Mentors</h5>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="counter__item">
                             <div class="counter__item__number">
-                                <h2 class="count">74</h2>
+                                <h2 class="count">5234</h2>
                             </div>
                             <div class="counter__item__text">
-                                <h5>Cups Of<br /> Coffee</h5>
+                                <h5>Funds<br/>Raised</h5>
                             </div>
                         </div>
                     </div>
@@ -326,7 +308,6 @@
             </div>
         </div>
     </section>
-    <!-- Services Section End -->
 
     <!-- Testimonial Section Begin -->
         <!--
@@ -464,16 +445,15 @@
                         <div class="logo__carousel__item">
                             <a href="#"><img src="img/info.png" alt=""></a>
                         </div>
-
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <h1 style="color:white">.</h1>
     </section>
-    <!-- Testimonial Section End -->
+    <!-- Testimonial Section End 
 
-    <!-- Team Section Begin -->
+
     <section class="team spad">
         <div class="container">
             <div class="row">
@@ -544,10 +524,65 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/team/team-1.jpg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Dolores Webster</h5>
+                                <span>CEO & Founder</span>
+                            </div>
+                            <p>Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies consectetur. Ut viverra
+                                porta leo, non tincidunt mauris condimentum eget. Vivamus non turpis elit. Aenean
+                            ultricies nisl sit amet.</p>
+                            <div class="team__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/team/team-2.jpg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Dana Vaughn</h5>
+                                <span>Architect</span>
+                            </div>
+                            <p>Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies consectetur. Ut viverra
+                                porta leo, non tincidunt mauris condimentum eget. Vivamus non turpis elit. Aenean
+                            ultricies nisl sit amet.</p>
+                            <div class="team__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/team/team-3.jpg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Jonathan Mcdaniel</h5>
+                                <span>Architect</span>
+                            </div>
+                            <p>Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies consectetur. Ut viverra
+                                porta leo, non tincidunt mauris condimentum eget. Vivamus non turpis elit. Aenean
+                            ultricies nisl sit amet.</p>
+                            <div class="team__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- Team Section End -->
+     Team Section End -->
 
     <!-- Call To Action Section Begin -->
     <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
@@ -556,7 +591,7 @@
                 <div class="col-lg-10 text-center">
                     <div class="callto__text">
                         <span>Why choose us?</span>
-                        <h2>Our Ability To Deliver Outstanding Results For Our Clients Starts With Our Team Of Smart.
+                        <h2>Our Ability To Deleiver Results and help change lives sets us apart from the rest!
                         </h2>
                         <a href="#" class="primary-btn">Contact Us</a>
                     </div>
@@ -567,62 +602,6 @@
     <!-- Call To Action Section End -->
 
     <!-- Latest Section Begin -->
-    <section class="latest spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9 col-md-8 col-sm-6">
-                    <div class="section-title">
-                        <span>Latest News</span>
-                        <h2>From our blog</h2>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="latest__btn">
-                        <a href="#" class="primary-btn normal-btn">View All</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="latest__item">
-                        <div class="latest__item__pic">
-                            <img src="img/blog/latest-1.jpg" alt="">
-                        </div>
-                        <div class="latest__item__text">
-                            <span>Architecture</span>
-                            <h4>Target and Amazon Shopping List for Home Stagers</h4>
-                            <a href="#">Read more</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="latest__item">
-                        <div class="latest__item__pic">
-                            <img src="img/blog/latest-2.jpg" alt="">
-                        </div>
-                        <div class="latest__item__text">
-                            <span>Interior</span>
-                            <h4>6 Ideas for Team Building and Employee Appreciation for Home Stagers</h4>
-                            <a href="#">Read more</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="latest__item">
-                        <div class="latest__item__pic">
-                            <img src="img/blog/latest-3.jpg" alt="">
-                        </div>
-                        <div class="latest__item__text">
-                            <span>Planning</span>
-                            <h4>How to Find the Best Price Structure for Your Home Staging Services</h4>
-                            <a href="#">Read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Latest Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
@@ -637,8 +616,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer__top__newslatter">
                             <form action="#">
-                                <input type="text" placeholder="Enter your email...">
-                                <button type="submit"><i class="fa fa-send"></i></button>
+                            <a href="#" class="primary-btn">Contact Us</a>
                             </form>
                         </div>
                     </div>
@@ -648,52 +626,18 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
+                            <a href="#"><img src="img/ECDElogo.png" alt=""></a>
                         </div>
-                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
+                        <p>39111 Paseo Padre Pkwy<br />Fremont,  CA 94538</p>
                         <ul>
-                            <li>Info.colorlib@gmail.com</li>
-                            <li>+84 123 456 789</li>
+                            <li>ecdeorg@gmail.com</li>
+                            <li>(510) 737-9942</li>
                         </ul>
                         <div class="footer__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/ecdefoundation/?ref=page_internal"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/ecde.foundation/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/ecde-foundation/?viewAsMember=true"><i class="fa fa-linkedin"></i></a>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>Company</h6>
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Our Works</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="#">FAQs</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>Services</h6>
-                        <ul>
-                            <li><a href="#">Architecture</a></li>
-                            <li><a href="#">Interior Design</a></li>
-                            <li><a href="#">Exterior Design</a></li>
-                            <li><a href="#">Planning</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__address">
-                        <h6>Get In Touch</h6>
-                        <p>7176 Blue Spring Lane <br />Santa Monica, CA 90403</p>
-                        <ul>
-                            <li>Info.colorlib@gmail.com</li>
-                            <li>+84 123 456 789</li>
-                        </ul>
                     </div>
                 </div>
             </div>
