fixed donate page, contact page, and margin issue

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/slick.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+
+    <style>
+        body {
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 
 <body>
@@ -50,7 +56,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="index.html"><img style="height:55px;width:165px;margin:-10px"; src="img/ECDElogo.png" alt=""></a>
+                        <a href="index.html"><img style="height: 55px; width: 165px; margin: -10px;" src="img/ECDElogo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
