--- a/projects.html
+++ b/projects.html
@@ -43,21 +43,24 @@
     </div>
     <!-- Offcanvas Menu End -->
 
-    <!-- Header Section Begin -->
+<!-- Header Section Begin -->
     <header class="header">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="#"><img src="img/logo.png" alt=""></a>
+                        <a href="index.html"><img style="height: 55px; width: 165px; margin: -10px;" src="img/ECDElogo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li class="active"><a href="./projects.html">Projects</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <li class="active"><a href="./projects.html">Get Involved</a></li>
+                            <li><a href="./about.html">Donate</a></li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <li><a href="./about.html">Contact</a></li>
+<!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -68,13 +71,14 @@
                             </li>
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./contact.html">Contact</a></li>
+                        -->
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__widget">
                         <span>Call us for any questions</span>
-                        <h4>+01 123 456 789</h4>
+                        <h4>(510) 737-9942</h4>
                     </div>
                 </div>
             </div>
@@ -90,10 +94,6 @@
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
                         <h2>Our Projects</h2>
-                        <div class="breadcrumb__links">
-                            <a href="./index.html">Home</a>
-                            <span>Projects</span>
-                        </div>
                     </div>
                 </div>
             </div>
