Fixing about page
fixing page

--- a/about.html
+++ b/about.html
@@ -43,21 +43,24 @@
     </div>
     <!-- Offcanvas Menu End -->
 
-    <!-- Header Section Begin -->
+<!-- Header Section Begin -->
     <header class="header">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="header__logo">
-                        <a href="#"><img src="img/logo.png" alt=""></a>
+                        <a href="index.html"><img style="height: 55px; width: 165px; margin: -10px;" src="img/ECDElogo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="./projects.html">Projects</a></li>
-                            <li class="active"><a href="./about.html">About</a></li>
+                            <li><a href="./projects.html">Get Involved</a></li>
+                            <li><a href="./about.html">Donate</a></li>
+                            <li class="active"><a href="./about.html">About Us</a></li>
+                            <li><a href="./about.html">Contact</a></li>
+<!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./Project-details.html">Project Details</a></li>
@@ -68,13 +71,14 @@
                             </li>
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./contact.html">Contact</a></li>
+                        -->
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="header__widget">
                         <span>Call us for any questions</span>
-                        <h4>+01 123 456 789</h4>
+                        <h4>(510) 737-9942</h4>
                     </div>
                 </div>
             </div>
@@ -91,8 +95,6 @@
                     <div class="breadcrumb__text">
                         <h2>About Us</h2>
                         <div class="breadcrumb__links">
-                            <a href="./index.html">Home</a>
-                            <span>About Us</span>
                         </div>
                     </div>
                 </div>
@@ -112,33 +114,14 @@
                             <h2>About Us</h2>
                         </div>
                         <div class="about__para__text">
-                            <p>As you might expect of a company that began as a high-end interiors contractor.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8">
                     <div class="about__page__services">
                         <div class="about__page__services__text">
-                            <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
-                                grids. We propose and discuss design rules for functional metasurfaces with randomly
-                            placed. Anisotropic elements that randomly sample. Quisque sit amet nisl ante.</p>
+                            <p>ECDE Foundation, or Every Child Deserves Education Foundation, is a 501(c)(3) nonprofit organization run by students whose goal is to contribute to the betterment of education for children worldwide by providing funds/resources to underprivileged schools. We are currently working on a project in which we create educational videos to help the underprivileged children learn about a variety of subjects.</p>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-6">
-                                <div class="services__item">
-                                    <img src="img/services/services-5.png" alt="">
-                                    <h4>Our Mission</h4>
-                                    <p>As you might expect of a company that began as a high-end interiors contractor,
-                                    we pay strict attention. Anisotropic elements that randomly sample.</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-sm-6">
-                                <div class="services__item">
-                                    <img src="img/services/services-6.png" alt="">
-                                    <h4>Our Vision</h4>
-                                    <p>Our commitment to exceptional quality has never wavered. To day ranks as one of
-                                        the most highly-regarded construction. Anisotropic elements that randomly
-                                    sample.</p>
                                 </div>
                             </div>
                         </div>
@@ -156,8 +139,8 @@
                 <div class="col-lg-10 text-center">
                     <div class="callto__text">
                         <span>Why choose us?</span>
-                        <h2>Our ability to bring outstanding results to our customers.</h2>
-                        <a href="#" class="primary-btn">Contact Us</a>
+                        <h2>Our ability to bring outstanding people together to solve problems makes us successful</h2>
+                        <a href="contact.html" class="primary-btn">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -177,21 +160,19 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="team__btn">
-                        <a href="#" class="primary-btn normal-btn">View All</a>
+                        <a href="#" class="primary-btn normal-btn">Join Us</a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/team/team-1.jpg">
+                    <div class="team__item set-bg" data-setbg="img/pb.jpg">
                         <div class="team__text">
                             <div class="team__title">
-                                <h5>Dolores Webster</h5>
-                                <span>CEO & Founder</span>
+                                <h5>Pramukh Bushan</h5>
+                                <span>CEO</span>
                             </div>
-                            <p>Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies consectetur. Ut viverra
-                                porta leo, non tincidunt mauris condimentum eget. Vivamus non turpis elit. Aenean
-                            ultricies nisl sit amet.</p>
+                            <p>Hi, I am Pramukh and I am a junior at American High. Additionally, have been leading ECDE since founding it in 2018 and have completed many projects to improve education for students. I have always been active in business and attended a business camp in 2018  where I created a product for a nonprofit and helped me jump-start ECDE Foundation.</p>
                             <div class="team__social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -201,15 +182,13 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/team/team-2.jpg">
+                    <div class="team__item set-bg" data-setbg="img/avm.jpg">
                         <div class="team__text">
                             <div class="team__title">
-                                <h5>Dana Vaughn</h5>
-                                <span>Architect</span>
+                                <h5>Abhijith Varma Mudunuri</h5>
+                                <span>CTO</span>
                             </div>
-                            <p>Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies consectetur. Ut viverra
-                                porta leo, non tincidunt mauris condimentum eget. Vivamus non turpis elit. Aenean
-                            ultricies nisl sit amet.</p>
+                            <p>Abhijith is a junior at American High School. He loves to compete in public forum debate, design UI, and program backend. In his spare time, he enjoys playing video games, coding, and teaching debate at Ezy Learning. Abhijith learned python in 8th grade and web development in 9th grade</p>
                             <div class="team__social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -219,15 +198,29 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/team/team-3.jpg">
+                    <div class="team__item set-bg" data-setbg="img/up.jpg">
                         <div class="team__text">
                             <div class="team__title">
-                                <h5>Jonathan Mcdaniel</h5>
-                                <span>Architect</span>
+                                <h5>Ujjawal Prasad</h5>
+                                <span>CMO</span>
                             </div>
-                            <p>Vestibulum dapibus odio quam, sit amet hendrerit dui ultricies consectetur. Ut viverra
-                                porta leo, non tincidunt mauris condimentum eget. Vivamus non turpis elit. Aenean
-                            ultricies nisl sit amet.</p>
+                            <p> Hi! I am Ujjawal, a sophomore at American High School. Ever since I was a kid, I have wanted to contribute back to society in some way, and when I found ECDE I knew helping underprivileged kids was the way to do that. Along with allowing me to help those in need, I have also learned valuable skills in ECDE such as team management and marketing.</p>
+                            <div class="team__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="team__item set-bg" data-setbg="img/sp.jpg">
+                        <div class="team__text">
+                            <div class="team__title">
+                                <h5>Shanjay Chandraprakasam</h5>
+                                <span>CPO</span>
+                            </div>
+                            <p>Hi I am Shanjay, since the beginning of my high school (I am now a junior)  I have aspired to contribute as much as possible to non-profit organizations directed with an important cause. ECDE foundation has allowed me to explore that passion but also allowed me to develop my leadership and teamwork skills.</p>
                             <div class="team__social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
