--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- Hero Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg" data-setbg="img/learnbg1.png">
+            <div class="hero__items set-bg" data-setbg="img/img1.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
                     <a href="#" class="primary-btn">Get Involved</a>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__items set-bg" data-setbg="img/learnbg5.png">
+            <div class="hero__items set-bg" data-setbg="img/img5.png">
                 <div class="hero__text">
                     <h2>Every Child Deserves Education Foundation</h2>
                     <a href="#" class="primary-btn">View Projects</a>
