--- a/contact.html
+++ b/contact.html
@@ -64,11 +64,11 @@
 					<div class="col-lg-6">
 						<nav class="header__menu mobile-menu">
 							<ul>
-								<li class="active"><a href="./index.html">Home</a></li>
+								<li><a href="./index.html">Home</a></li>
 								<li><a href="./projects.html">Get Involved</a></li>
 								<li><a href="./about.html">Donate</a></li>
 								<li><a href="./about.html">About Us</a></li>
-								<li><a href="./about.html">Contact</a></li>
+								<li class="active"><a href="./contact.html">Contact</a></li>
 								<!--
                                 <li><a href="#">Pages</a>
                                     <ul class="dropdown">
@@ -102,8 +102,6 @@
 						<div class="breadcrumb__text">
 							<h2>Contact Us</h2>
 							<div class="breadcrumb__links">
-								<a href="./index.html">Home</a>
-								<span>Contact Us</span>
 							</div>
 						</div>
 					</div>
