--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <li><a href="./projects.html">Get Involved</a></li>
                             <li><a href="./about.html">Donate</a></li>
                             <li><a href="./about.html">About Us</a></li>
-                            <li><a href="./about.html">Contact</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
 <!--
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
