--- a/zoom.html
+++ b/zoom.html
@@ -58,7 +58,7 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./projects.html">Get Involved</a></li>
                             <li><a href="./about.html">Donate</a></li>
-                            <li class="active"><a href="./about.html">About Us</a></li>
+                            <li><a href="./about.html">About Us</a></li>
                             <li><a href="./about.html">Contact</a></li>
 <!--
                             <li><a href="#">Pages</a>
@@ -93,8 +93,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>About Us</h2>
-                        <div class="breadcrumb__links">
+                        <h2>Zoom Classes</h2>
                         </div>
                     </div>
                 </div>
@@ -103,136 +102,41 @@
     </div>
     <!-- Breadcrumb Section End -->
 
-    <!-- About Page Section Begin -->
-    <section class="about-page spad">
+    <!-- Project Details Section Begin -->
+    <section class="project-details spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4">
-                    <div class="about__text about__page__text">
-                        <div class="section-title">
-                            <span>who are we</span>
-                            <h2>About Us</h2>
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <img src="zoom\96287035_117158559983480_3146598813209198592_n.jpeg" alt="">
+                            <img src="zoom\96380159_117158513316818_6562887693905166336_n.jpeg" alt="">
+                            <img src="zoom\IMG_3693.jpg" alt="">
+                            <img src="zoom\IMG_3696.jpg" alt="">
                         </div>
-                        <div class="about__para__text">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <img src="zoom\IMG_3694.jpg" alt="">
+                            <img src="zoom\IMG_3695.jpg" alt="">
+                            <img src="zoom\IMG_3696 2.jpg" alt="">
+                            <img src="zoom\IMG_3697.jpg" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-8 col-md-8">
-                    <div class="about__page__services">
-                        <div class="about__page__services__text">
-                            <p>ECDE Foundation, or Every Child Deserves Education Foundation, is a 501(c)(3) nonprofit organization run by students whose goal is to contribute to the betterment of education for children worldwide by providing funds/resources to underprivileged schools. We are currently working on a project in which we create educational videos to help the underprivileged children learn about a variety of subjects.</p>
-                        </div>
-                                </div>
-                            </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="project__sidebar">
+                        <div class="project__sidebar__about">
+                            <h2 class="text-center">Maruthi Sevakshethra NGO</h2>
+                            <p>The ECDE Foundation has partnered with an Institution in India called Maruthi Seva Kshetra. This Institution schools orphaned children and children who cannot afford proper education by giving them all the basic needs in life. In addition, the Institution runs a school that is open to the public. We are proud to be working with them and 100% of our donations will go to them in the 2018-2019 year.</p>
+                            <p>On August 15, 2019 ECDE Foundation donated $800 and 2 computers to Maruthi Seva school/organization. The school used some money to buy a water heater so they can get clean hot water. In addition, they used the rest of the money to buy textbooks and other such supplies. Our CEO and our Program Manager met with the kids we were helping and spent time with them. We understood the true extent of their needs and were pleasantly surprised to see their drive for learning.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- About Page Section End -->
-
-    <!-- Call To Action Section Begin -->
-    <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
-        <div class="container">
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-10 text-center">
-                    <div class="callto__text">
-                        <span>Why choose us?</span>
-                        <h2>Our ability to bring outstanding people together to solve problems makes us successful</h2>
-                        <a href="contact.html" class="primary-btn">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Call To Action Section End -->
-
-    <!-- Team Section Begin -->
-    <section class="team spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9 col-md-8 col-sm-6">
-                    <div class="section-title">
-                        <span>Our Team</span>
-                        <h2>Meet our team</h2>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="team__btn">
-                        <a href="#" class="primary-btn normal-btn">Join Us</a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/pb.jpg">
-                        <div class="team__text">
-                            <div class="team__title">
-                                <h5>Pramukh Bushan</h5>
-                                <span>CEO</span>
-                            </div>
-                            <p>Hi, I am Pramukh and I am a junior at American High. Additionally, have been leading ECDE since founding it in 2018 and have completed many projects to improve education for students. I have always been active in business and attended a business camp in 2018  where I created a product for a nonprofit and helped me jump-start ECDE Foundation.</p>
-                            <div class="team__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/avm.jpg">
-                        <div class="team__text">
-                            <div class="team__title">
-                                <h5>Abhijith Varma Mudunuri</h5>
-                                <span>CTO</span>
-                            </div>
-                            <p>Abhijith is a junior at American High School. He loves to compete in public forum debate, design UI, and program backend. In his spare time, he enjoys playing video games, coding, and teaching debate at Ezy Learning. Abhijith learned python in 8th grade and web development in 9th grade</p>
-                            <div class="team__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/up.jpg">
-                        <div class="team__text">
-                            <div class="team__title">
-                                <h5>Ujjawal Prasad</h5>
-                                <span>CMO</span>
-                            </div>
-                            <p> Hi! I am Ujjawal, a sophomore at American High School. Ever since I was a kid, I have wanted to contribute back to society in some way, and when I found ECDE I knew helping underprivileged kids was the way to do that. Along with allowing me to help those in need, I have also learned valuable skills in ECDE such as team management and marketing.</p>
-                            <div class="team__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="team__item set-bg" data-setbg="img/sp.jpg">
-                        <div class="team__text">
-                            <div class="team__title">
-                                <h5>Shanjay Chandraprakasam</h5>
-                                <span>CPO</span>
-                            </div>
-                            <p>Hi I am Shanjay, since the beginning of my high school (I am now a junior)  I have aspired to contribute as much as possible to non-profit organizations directed with an important cause. ECDE foundation has allowed me to explore that passion but also allowed me to develop my leadership and teamwork skills.</p>
-                            <div class="team__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Team Section End -->
+    <!-- Project Details Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
